Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-72759

macOS: QToolbar Separator color is incorrect in Dark Mode

    XMLWordPrintable

Details

    • macOS
    • ebddd02896709d5856dc73f1a4f1479133c7ed2f (qt/qtbase/5.12)

    Description

      QToolbar Separator should be more light when Dark Mode. Please see attachment picture.

       

      Seems that color is fixed in qtbase/src/plugins/styles/mac/qmacstyle_mac.mm.

          case PE_IndicatorToolBarSeparator: {
                  QPainterPath path;
                  if (opt->state & State_Horizontal) {
                      int xpoint = opt->rect.center().x();
                      path.moveTo(xpoint + 0.5, opt->rect.top() + 1);
                      path.lineTo(xpoint + 0.5, opt->rect.bottom());
                  } else {
                      int ypoint = opt->rect.center().y();
                      path.moveTo(opt->rect.left() + 2 , ypoint + 0.5);
                      path.lineTo(opt->rect.right() + 1, ypoint + 0.5);
                  }
                  QPainterPathStroker theStroker;
                  theStroker.setCapStyle(Qt::FlatCap);
                  theStroker.setDashPattern(QVector<qreal>() << 1 << 2);
                  path = theStroker.createStroke(path);
                  p->fillPath(path, QColor(0, 0, 0, 119));
              }
      

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              tpochep Timur Pocheptsov
              akizawa Akihito Izawa
              Votes:
              2 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes